--- a/movie_app/templates/movie_app/all_movies.html
+++ b/movie_app/templates/movie_app/all_movies.html
@@ -7,7 +7,7 @@
     <h2>List of all films</h2>
     <ul>
         {% for movie in movies %}
-            <li><a href="{% url 'movie_detail' movie.id %}">{{ movie.name }}</a>, raiting - {{ movie.rating }}, year - {{ movie.year|default:"Unknown" }}</li>
+            <li><a href="{{ movie.get_url }}">{{ movie.name }}</a>, raiting - {{ movie.rating }}, year - {{ movie.year|default:"Unknown" }}</li>
         {% endfor %}
     </ul>
 {% endblock %}
