--- a/movie_app/templates/movie_app/one_movie.html
+++ b/movie_app/templates/movie_app/one_movie.html
@@ -8,4 +8,16 @@
     <h3> Rating - {{ movie.rating }}</h3>
     <h3> Budget - {{ movie.budget }}</h3>
     <h3> Year - {{ movie.year }}</h3>
+    <hr>
+    <h3> Info about filmmaker</h3>
+    <h3> Name {{ movie.director.first_name }}</h3>
+    <h3> Last_Name {{ movie.director.last_name }}</h3>
+    <h3> E-mail  {{ movie.director.director_email }}</h3>
+    <hr>
+    <h3> Lists actors </h3>
+    <ul>
+        {% for actor in movie.actors.all %}
+            <li> {{ actor }} </li>
+        {% endfor %}
+    </ul>
 {% endblock %}
